Changes in 2.0.38:
  o Bug Fixes:
    * Conary versions 1.1.20 (April 2007) through 2.0.37, inclusive, use a 
      SHA256 implementation provided by the pycrypto package, which contained 
      an implementation that generates faulty digests for certain message 
      lengths. To compensate, a backward compatibility module that implements 
      bug-for-bug compatibility with the incorrect SHA256 algorithm has been
      added, in order to inter-operate (generate and validate signatures) 
      with Conary versions which use the incorrect SHA256 implementation 
      in pycrypto. (CNY-3086)
           
Changes in 2.0.37:
  o Bug Fixes:
    * Resolved a bug introduced in the 2.0.36 sha1Uncompress function
      that could cause update operations to fail. (CNY-3084)

Changes in 2.0.36:
  o New Features:
    * Policy can now be added per distribution in the directory
      /usr/lib/conary/distro/policy. (CNY-3071)

  o Bug Fixes:
    * More fixes for flavored superclass groups - you can now commit
      recipes when autoloading flavored superclass groups. (CNY-3061)
    * Schema migrations are now transactional, meaning that any failure
      during migration will roll back cleanly where possible. (CNY-2789)
    * If a user removes a file, and then recreates the file as a
      directory, the warning message previously did not include the
      affected path.  This has been fixed. (CNY-3076)
    * Path conflicts generated during group cooks correctly print. (CNY-3079)
    * You can now display buildreqs using --show-buildreqs for other
      types of recipes other than packages (CNY-3075)
    * You can now add archives with files with % in them when perserving 
      ownership. (CNY-3080)
    * All troveInfo is now used to calculate a changeset fingerprint, 
      regardless of the client version specified.  This allows a proxy 
      to expire its cached version when extended trove info is 
      updated. (CNY-3083)